--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,6 +6,8 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+
 .pp{
   margin-bottom: 20px;
 }
@@ -63,3 +65,26 @@
 .usermotto {
   margin-top: 200px;
 }
+
+
+@media(prefers-color-scheme: dark){
+  .schoolcon2{
+    height: auto;
+    width: 100%;
+    
+    background-color: rgb(51, 51, 51);
+    border-radius: 30px;
+    align-items: center;
+    text-align: center;
+    padding: 5px;  
+  }
+  .school{
+    background-color: rgb(51, 51, 51);
+    border-radius: 10px;
+    width: 20%;
+    align-items: center;
+    text-align: center;
+    margin-inline-end: 10px;
+    padding: 5px;  
+  }
+ }
